Complete the analysis tutorial text

--- a/rnapoliii/analysis/.template.analysis.ipynb
+++ b/rnapoliii/analysis/.template.analysis.ipynb
@@ -14,7 +14,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this tutorial we will look at the output from the previous tutorial, modeling with cross-links and EM data. This follows the protocol described in more detail in [Viswanath *et al.*, \"Assessing Exhaustiveness of Stochastic Sampling for Integrative Modeling of Macromolecular Structures\". Biophys J **113**, 2344-2353, 2017](https://www.ncbi.nlm.nih.gov/pubmed/29211988)."
+    "# Introduction {#intro}\n",
+    "\n",
+    "In this tutorial we will look at the output from the previous tutorial, modeling with cross-links and EM data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we have generated a number of candidate models from our sampling run(s), analysis consists of a number of steps (below)."
    ]
   },
   {
@@ -28,11 +37,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "First, we select a subset of the models for analysis, perhaps by discarding models that violate too many of the restraints or from early in each run before equilibration is complete.\n",
+    "\n",
+    "The next step is to assess whether our sampling was exhaustive (more on this below). If we have not sampled the scoring function surface adequately at some level of resolution, we cannot trust our models. In broad strokes, this is done by taking two independent samples and comparing them; if sampling is exhaustive they should sample the same conformational space to the same degree.\n",
+    "\n",
+    "Two more indications of model quality are a good fit to the data that were used to construct the restraints, plus a good fit to data that was not used in the modeling (for example data that were intentionally held back, or that are difficult or expensive to use as restraints).\n",
+    "\n",
+    "In certain situations we can also estimate the variance of the input data by resampling. For example, when using cross-linking data we can repeat the entire modeling procedure leaving out a random fraction of the cross-links.\n",
+    "\n",
+    "This tutorial largely follows the protocol described in more detail in [Viswanath *et al.*, \"Assessing Exhaustiveness of Stochastic Sampling for Integrative Modeling of Macromolecular Structures\". Biophys J **113**, 2344-2353, 2017](https://www.ncbi.nlm.nih.gov/pubmed/29211988)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Get precalculated outputs {#getoutputs}\n",
     "\n",
     "First, download `imp_tutorial_pol3_xl_cryoem_premodeling.v1.1.tar.gz` from [Zenodo](https://doi.org/10.5281/zenodo.3523241) and extract it in the same directory (`analysis`) as this notebook. (This should already have been done for you.)\n",
     "\n",
-    "This file contains RMF and stat file outputs for longer Monte Carlo runs using the previously-demonstrated script, with multiple replicas."
+    "This file contains RMF and stat file outputs for longer Monte Carlo runs using the previously-demonstrated script, with multiple replicas:"
    ]
   },
   {
@@ -105,7 +129,7 @@
     "The `-mlt` and `-mut` keywords, which are optional, define thresholds for restraints made\n",
     "of multiple components (such as crosslinks).\n",
     "\n",
-    "Note that a list of acceptable stat file keywords can be determined using the `scripts/show_stat.py` script:"
+    "Note that a list of acceptable stat file keywords can be determined using the `scripts/show_stat.py` script (or by looking at a stat file in a text editor, as they have a very simple format):"
    ]
   },
   {
@@ -222,7 +246,7 @@
     "\n",
     "We rerun `select_good_scoring_models.py` adding the extra keywords and score thresholds. These thresholds return 1671 good scoring models.\n",
     "\n",
-    "In general, we require at least 1000 or more models for assessing sampling exhaustiveness. Our score thresholds were chosen in order to have a reasonable number (1000-20000) models for analysis. If we have too few models, the satisfaction criteria should be relaxed, or more sampling should be performed to find more satisfactory models. Too many models (\\>20,000) will make subsequent processing more computationally intensive; in this case satisfaction criteria can be made stricter, or one can pass a random subset of these models to the sampling convergence protocol."
+    "> In general, we require at least 1000 or more models for assessing sampling exhaustiveness. Our score thresholds were chosen in order to have a reasonable number (1000-20000) models for analysis. If we have too few models, the satisfaction criteria should be relaxed, or more sampling should be performed to find more satisfactory models. Too many models (\\>20,000) will make subsequent processing more computationally intensive; in this case satisfaction criteria can be made stricter, or one can pass a random subset of these models to the sampling convergence protocol."
    ]
   },
   {
@@ -254,7 +278,72 @@
     "The `Master_Sampling_Exhaustiveness_Analysis.py` script is used to\n",
     "calculate the sampling precision of the modeling. During this step,\n",
     "multiple tests for convergence are performed on the two samples\n",
-    "determined above, models are clustered, and localization densities are computed.\n",
+    "determined above, models are clustered, and localization densities are computed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Procedure {#exhaustproc}\n",
+    "\n",
+    "Ideally, we want to generate the complete ensemble of models consistent with the input information (good-scoring models). The variation among the models in this ensemble quantifies the uncertainty of modeling (**model precision**).\n",
+    "\n",
+    "We need to know the model precision because\n",
+    "\n",
+    " - it gives an estimate of the aggregate uncertainty in the input information;\n",
+    " - it likely provides the lower bound on model accuracy;\n",
+    " - applications of models strongly depend on their accuracy;\n",
+    " - only when it is known can the model be used to inform future choices, such as whether to gather more data, change the system representation, scoring functions, or sampling algorithms.\n",
+    "\n",
+    "Generally, it is not possible to sample completely because the space is just too large, so we have to use stochastic sampling such as Monte Carlo, and we can only aim to find *representative* good-scoring models.\n",
+    "\n",
+    "These representative models sample all good-scoring models at some precision, which we define as the **sampling precision**. Clearly, the sampling precision imposes a lower limit on the model precision.\n",
+    "\n",
+    "Therefore, exhaustive sampling of good-scoring models is a prerequisite for accurate modeling and assessment of model precision.\n",
+    "\n",
+    "Sampling is *exhaustive* at a certain precision when it generates all sufficiently good-scoring models at this precision.\n",
+    "\n",
+    "> Sampling exhaustiveness and sampling precision are invariably intertwined. There is always a precision at which any sampling is exhaustive; for example, even a single structure provides an exhaustive sample at a precision worse than the scale of the system.\n",
+    "\n",
+    "As a proxy for assessing sampling exhaustiveness, we evaluate whether or not two independently and stochastically generated sets of models (model samples) are sufficiently similar. Passing these tests is a necessary, but not sufficient condition for exhaustive sampling. (For example, part of the sampling space could be missed in all samples.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Four tests must be passed as part of the protocol:\n",
+    "\n",
+    " - convergence of the model score;\n",
+    " - whether model scores for the two model samples were drawn from the same parent distribution;\n",
+    " - whether each structural cluster includes models from each sample proportionally to its size;\n",
+    " - whether there is sufficient structural similarity between the two model samples in each cluster.\n",
+    " \n",
+    "The tests are evaluated using the following steps:\n",
+    " \n",
+    "<img src=\"images/exhaust-flowchart.png\" width=300px title=\"Sampling exhaustiveness flowchart\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The distance threshold-based clustering merits further explanation. We define the sampling precision as the radius of the clusters in the finest clustering for which\n",
+    "\n",
+    " - each sample contributes models proportionally to its size (considering both significance and magnitude of the difference)\n",
+    " - a sufficient proportion of all models occur in sufficiently large clusters\n",
+    " \n",
+    "This is demonstrated below in 2D space. Two independent equal-sized random samples of good-scoring models are shown in red and blue. Models in the two samples are clustered together. The gray circles indicate cluster boundaries and the gray-scale indicates the density of models in the cluster. The size of the circles indicates the clustering threshold. The test assesses whether the proportion of models from the two samples (red and blue) is similar in each significant cluster. Note that some models are shown as open circles, indicating that these models belong to insignificant clusters (i.e., small clusters containing few models).\n",
+    " \n",
+    "<img src=\"images/chi2-test.png\" width=400px title=\"χ² test\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running the script {#exhaustrun}\n",
     "\n",
     "The script first needs a file, `density_ranges.txt`, that defines components\n",
     "using PMI selection tuples on which we calculate localization densities.\n",
@@ -345,7 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Results {#results}\n",
+    "## Results {#results}\n",
     "\n",
     "Once the script completes, a number of outputs are created:\n",
     "\n",
@@ -365,27 +454,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/clustering.png\" width=600px title=\"Clustering\" />"
+    "## Discussion {#exhaustdiscuss}\n",
+    "\n",
+    "By examination of these plots, first we can see that a large number of small clusters were determined, rather than a small number of dominant clusters (bottom right plot). The model score (top left plot) also does not appear to have converged.\n",
+    "\n",
+    "To compare the two score distributions (top right plot) we perform the Kolmogorov-Smirnov two-sample test and calculate a *p* value and effect size *D* (since even a tiny difference between two distributions can be significant if the samples are large). The score distributions are considered similar if the difference is not statistically significant (*p* value > 0.05) or if the difference is significant (*p* value < 0.05) but its magnitude is small (*D* < 0.30). In this case the two distributions are quite similar.\n",
+    "\n",
+    "For the convergence test, we again calculate a similarly measure χ² and its effect size V, plus the fraction of models that are present in clusters containing at least 10 models (bottom left plot). Sampling precision is the clustering threshold where cluster population >= 80% while χ² < 0.05 and V >= 0.1 (green, red and blue dashed lines, respectively). It should be clear from this plot that χ² is not varying smoothly with threshold and so the determined precision (black dashed line) is unreliable.\n",
+    "\n",
+    "The combination of these plots strongly suggests that our sampling is insufficient. Note also that while the score distributions and cluster populations for the two samples look similar, this is probably also an artefact of our under-sampling (remember that we only made a single run, so our two samples were generated by randomly breaking that one run into two samples; likely they are correlated to some degree).\n",
+    "\n",
+    "The next step suggested by these results is to carry out multiple independent runs (this is more likely to ensure that the samples are uncorrelated, plus it is easier to implement multiple runs on a cluster than one long run). Each run should also likely be longer than the run analyzed here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As an example of a good result, see similar plots for the recent modeling of the yeast nuclear pore complex; see\n",
+    "[Kim *et al.*, \"Integrative Structure and Functional Anatomy of a Nuclear Pore Complex.\" Nature **555**, 475-482, 2018](https://www.ncbi.nlm.nih.gov/pubmed/29539637) for more details.\n",
+    "\n",
+    "<img src=\"images/npc-exhaust.png\" width=600px title=\"Sampling exhaustiveness of NPC\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case we see good model convergence (top left), similar score distributions (top right), well behaved statistics giving a sampling precision of 9 Å (bottom left), and one dominant cluster (bottom right).\n",
+    "\n",
+    "> In some cases our sampling may not converge even with longer sampling runs. This may be an indication of sample heterogeneity, requiring multi-state modeling. For example, if the sample contains a complex in both open and closed forms, or with multiple compositions then it may not be possible to build a single model that represents both forms. See [Molnar *et al.* \"Cys-Scanning Disulfide Crosslinking and Bayesian Modeling Probe the Transmembrane Signaling Mechanism of the Histidine Kinase, PhoQ.\" Structure **22**, 1239-1251, 2014](https://www.ncbi.nlm.nih.gov/pubmed/25087511) or [Shi *et al.* \"A strategy for dissecting the architectures of native macromolecular assemblies.\" Nat Methods **12**, 1135-8, 2015](https://www.ncbi.nlm.nih.gov/pubmed/26436480) for examples."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fit to data {#fitdata}\n",
+    "\n",
+    "Fit to data is generally calculated as the fraction of cross-links satisfied, the cross correlation coefficient for the fit between the model and experimental EM density, or a similar score specific to a given type of data (either that used in the modeling or excluded). For example, the recent model of the yeast nuclear pore complex fits well against the cryo-ET data used as input:\n",
+    "\n",
+    "<img src=\"images/NPC-et-satisfy.png \" width=800px title=\"NPC fit to input XL-MS data\" />\n",
+    "\n",
+    "It also fits well against composites determined by affinity purification, and SAXS data, neither of which were used in the modeling itself:\n",
+    "\n",
+    "<img src=\"images/NPC-notused-satisfy.png \" width=800px title=\"NPC fit to composite and SAXS data\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Resampling {#resampling}\n",
+    "\n",
+    "Resampling is not covered in this tutorial, but for an example see [Viswanath *et al.* \"The molecular architecture of the yeast spindle pole body core determined by Bayesian integrative modeling.\" Mol Biol Cell. **7**, 3298-3314, 2017](https://www.ncbi.nlm.nih.gov/pubmed/28814505). (In this case jackknifing was done with the FRET data used in the modeling; see Figure S7.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Further reading {#further}\n",
+    "\n",
+    "Once analysis is complete and models are produced that completely sample the space at a reasonable precision, fit the input and unused data, and make biological sense, it is time to proceed to deposit them in the [PDB-Dev database](https://pdb-dev.wwpdb.org/). See the deposition tutorial in the `rnapoliii/deposition` directory for more details."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Calysto Bash",
+   "display_name": "Bash",
    "language": "bash",
-   "name": "calysto_bash"
+   "name": "bash"
   },
   "language_info": {
+   "codemirror_mode": "shell",
    "file_extension": ".sh",
-   "help_links": [
-    {
-     "text": "MetaKernel Magics",
-     "url": "https://metakernel.readthedocs.io/en/latest/source/README.html"
-    }
-   ],
    "mimetype": "text/x-sh",
-   "name": "bash",
-   "version": "0.2.2"
+   "name": "bash"
   }
  },
  "nbformat": 4,
