--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -1064,8 +1064,8 @@
     "\n",
     "A long modeling run was precomputed and analyzed. You can [download] it from our website, and you can [download](https://zenodo.org/record/3523241#.XbtB0y2ZMY2) from the Zenodo repository. For your convenience, the 150 best scoring models from each run were extracted and put in the `results` directory under the names `150_xl.rmf`: the XL-only modeling run; `150_xl_cryoem_1.rmf`: the first refinement of the XL+cryoEM modeling run; `150_xl_cryoem_2.rmf`: the second refinement of the XL+cryoEM modeling run; `150_xl_cryoem_1.rmf`: the third and last refinement of the XL+cryoEM modeling run. \n",
     "\n",
-    "### Clustering top models using `analysis.py` <a name=\"Clustering_3\"></a>\n",
-    "The `long_analysis.py` script, found in the `modeling` directory, calls the [AnalysisReplicaExchange](https://integrativemodeling.org/nightly/doc/ref/classIMP_1_1pmi_1_1macros_1_1AnalysisReplicaExchange.html) macro, which finds top-scoring models, extracts coordinates, runs clustering, and does basic cluster analysis including creating localization densities for each subunit. The script generates RMF, MRC files which should be viewable in Chimera.\n",
+    "### Clustering top models <a name=\"Clustering_3\"></a>\n",
+    "We use the [AnalysisReplicaExchange](https://integrativemodeling.org/nightly/doc/ref/classIMP_1_1pmi_1_1macros_1_1AnalysisReplicaExchange.html) class, which finds top-scoring models, extracts coordinates, runs clustering, and does basic cluster analysis including creating localization densities for each subunit. The script generates RMF, MRC files which should be viewable in Chimera.\n",
     "\n",
     "We can choose the number of clusters by changing the distance threshold, the subunits we want to use to calculate the RMSD, and the number of good-scoring solutions to include."
    ]
