fixed a few issues found during the workshop

--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -411,8 +411,33 @@
     "cryoEM=False\n",
     "\n",
     "if cryoEM:\n",
+    "    step=1\n",
     "    import IMP.bayesianem\n",
     "    import IMP.bayesianem.restraint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you are running several parallel jobs in a replica exchange sampling scheme (see below in Step 3) you might use MPI library. To get the index of the current replica you need the following code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    import IMP.mpi\n",
+    "    print('ReplicaExchange: MPI was found. Using Parallel Replica Exchange')\n",
+    "    rex_obj = IMP.mpi.ReplicaExchange()\n",
+    "except ImportError:\n",
+    "    print('ReplicaExchange: Could not find MPI. Using Serial Replica Exchange')\n",
+    "    rex_obj = IMP.pmi.samplers._SerialReplicaExchange()\n",
+    "\n",
+    "replica_number = rex_obj.get_my_index()"
    ]
   },
   {
@@ -649,11 +674,32 @@
    "outputs": [],
    "source": [
     "# Shuffle the rigid body and beads configuration for all molecules\n",
-    "IMP.pmi.tools.shuffle_configuration(root_hier,\n",
-    "                                    max_translation=50, \n",
-    "                                    verbose=False,\n",
-    "                                    cutoff=5.0,\n",
-    "                                    niterations=100)"
+    "\n",
+    "# if you use XL only \n",
+    "if not cryoEM:\n",
+    "    IMP.pmi.tools.shuffle_configuration(root_hier,\n",
+    "                                        max_translation=50, \n",
+    "                                        verbose=False,\n",
+    "                                        cutoff=5.0,\n",
+    "                                        niterations=100)\n",
+    "\n",
+    "# otherwise you radomize only if you start a new cryoEM-XL modeling\n",
+    "else:\n",
+    "    if step==1:\n",
+    "    # Shuffle the rigid body configuration of only the molecules we are interested in (Rpb4 and Rpb7)\n",
+    "    # but all flexible beads will also be shuffled.\n",
+    "    IMP.pmi.tools.shuffle_configuration(root_hier,\n",
+    "                                        max_translation=300,\n",
+    "                                        verbose=True,\n",
+    "                                        cutoff=5.0,\n",
+    "                                        niterations=100)\n",
+    "                                        #excluded_rigid_bodies=fixed_rbs,\n",
+    "\n",
+    "\n",
+    "    else:\n",
+    "        rh_ref = RMF.open_rmf_file_read_only('seed_%d.rmf3'%(step-1))\n",
+    "        IMP.rmf.link_hierarchies(rh_ref, [root_hier])\n",
+    "        IMP.rmf.load_frame(rh_ref, RMF.FrameID(replica_number))"
    ]
   },
   {
@@ -830,7 +876,6 @@
     "# First, get the model density objects that will be fitted to the EM density.\n",
     "\n",
     "if cryoEM:\n",
-    "    step=1\n",
     "    target_gmm_file=datadirectory+'%d_imp.gmm'%(step)\n",
     "    # First, get the model density objects that will be fitted to the EM density.\n",
     "    densities = IMP.atom.Selection(root_hier, representation_type=IMP.atom.DENSITIES).get_selected_particles()\n",
