Updates to work with modern IMP/PMI

--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -830,7 +830,7 @@
     "# Now, we set up the restraint.\n",
     "xl1rest = IMP.pmi.restraints.crosslinking.CrossLinkingMassSpectrometryRestraint(\n",
     "                                   root_hier=root_hier,  # The root hierarchy\n",
-    "                                   CrossLinkDataBase=xl1,# The XLDB defined above\n",
+    "                                   database=xl1,# The XLDB defined above\n",
     "                                   length=21.0,          # Length of the linker in angstroms\n",
     "                                   slope=0.002,          # A linear term that biases XLed\n",
     "                                                         # residues together\n",
@@ -923,7 +923,6 @@
     "              monte_carlo_sample_objects=dof.get_movers()+xl1rest.get_movers(), # All moving particles and parameters\n",
     "              output_objects=outputobjects,                # Objects to put into the stat file\n",
     "              rmf_output_objects=outputobjects,            # Objects to put into the rmf file\n",
-    "              crosslink_restraints=[xl1rest],              # allows XLs to be drawn in the RMF files\n",
     "              monte_carlo_temperature=1.0,   \n",
     "              replica_exchange_minimum_temperature=1.0,\n",
     "              replica_exchange_maximum_temperature=2.5,              \n",
