--- a/rnapoliii/deposition/.template.Deposition.ipynb
+++ b/rnapoliii/deposition/.template.Deposition.ipynb
@@ -172,7 +172,7 @@
    "outputs": [],
    "source": [
     "# Record the modeling protocol to an mmCIF file\n",
-    "po = IMP.pmi.mmcif.ProtocolOutput(None)\n",
+    "po = IMP.pmi.mmcif.ProtocolOutput()\n",
     "bs.system.add_protocol_output(po)\n",
     "po.system.title = \"Modeling of RNA Pol III\"\n",
     "# Add publication\n",
@@ -306,7 +306,7 @@
     "# Now, we set up the restraint.\n",
     "xl1rest = IMP.pmi.restraints.crosslinking.CrossLinkingMassSpectrometryRestraint(\n",
     "                                   root_hier=root_hier,  # The root hierarchy\n",
-    "                                   CrossLinkDataBase=xl1,# The XLDB defined above\n",
+    "                                   database=xl1,# The XLDB defined above\n",
     "                                   length=21.0,          # Length of the linker in angstroms\n",
     "                                   slope=0.002,           # A linear term that biases XLed\n",
     "                                                         # residues together\n",
@@ -360,7 +360,6 @@
     "              root_hier=root_hier,                         # The root hierarchy\n",
     "              monte_carlo_sample_objects=dof.get_movers()+xl1rest.get_movers(), # All moving particles and parameters\n",
     "              rmf_output_objects=outputobjects,            # Objects to put into the rmf file\n",
-    "              crosslink_restraints=[xl1rest],      # allows XLs to be drawn in the RMF files\n",
     "              monte_carlo_temperature=1.0,\n",
     "              replica_exchange_minimum_temperature=1.0,\n",
     "              replica_exchange_maximum_temperature=2.5,\n",
